--- a/vscode-workspace/codeigniter-env/.devcontainer/devcontainer.json
+++ b/vscode-workspace/codeigniter-env/.devcontainer/devcontainer.json
@@ -2,23 +2,25 @@
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.183.0/containers/docker-existing-dockerfile
 {
     // A display name for the container.
-	"name": "flutter-env",
+	"name": "codeigniter-env",
 
 	// Sets the base image of the container.
-	"dockerFile": "../../../dockerfiles/flutter-vscode-workspace",
+	"dockerComposeFile": "../../../compose-dev/codeigniter/docker-compose.yml",
 
+	"service": "myapp",
+
+	"shutdownAction": "stopCompose",
+	
 	// Set *default* container specific settings.json values on container create.
-	"settings": {
-		"files.trimTrailingWhitespace": true,
-		"files.trimFinalNewlines": true
-	},
+	"settings": {},
 	
 	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": [
-        "dart-code.flutter",
+        // "dart-code.flutter",
         "aaron-bond.better-comments",
         "coenraads.bracket-pair-colorizer-2",
-        "everettjf.pubspec-dependency-search",
+        // "jeroen-meijer.pubspec-assist",
+        // "everettjf.pubspec-dependency-search",
         "naumovs.color-highlight",
         "eamodio.gitlens",
         "gruntfuggly.todo-tree",
@@ -28,23 +30,21 @@
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
 
-	// An array with mount points that should be added to the container at runtime
-	// In Windows and macOS it will fail, don't difine this option
-	"mounts": ["source=/dev/bus/usb,target=/dev/bus/usb,type=bind"],
-
 	// Uncomment the next line to run commands after the container is created - for example installing slidy.
 	// "postCreateCommand": "dart pub global activate slidy",
 
-	// An array with string values that should be valid Docker arguments.
-	// We use --privileged to make sure that the container can access devices connected to the system.
-	"runArgs": [ "--privileged" ],
+	// Uncomment when using a ptrace-based debugger like C++, Go, and Rust
+	// "runArgs": [ "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined" ],
+
+	// Uncomment to use the Docker CLI from inside the container. See https://aka.ms/vscode-remote/samples/docker-from-docker.
+	// "mounts": [ "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind" ],
 
     // Overrides the default local mount point for the workspace.
-	"workspaceMount": "source=${localWorkspaceFolder}/workspace,target=/home/developer/workspace,type=bind,consistency=delegated",
+    // "workspaceMount": "source=${localWorkspaceFolder}/workspace,target=/home/developer/workspace,type=bind,consistency=delegated",
 
     // Sets the default path that VS Code should open when connecting to the container.
-    "workspaceFolder": "/home/developer/workspace",
+    "workspaceFolder": "/app/myapp",
 
 	// Uncomment to connect as a non-root user if you've added one. See https://aka.ms/vscode-remote/containers/non-root.
-	"remoteUser": "developer"
+	// "remoteUser": "developer"
 }
